# DPE-Energy-Performance-Analysis-ETL

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: github-volt-api-img-build-and-deploy.yml  github-volt-engine-build-pkg-prod.yml  github-volt-engine-build-pkg.yml  github-volt-engine-ci.yml  new-tag-creation.yml  tag-build-and-push.yml  tag_creation.yml
config/: paths.yaml.placeholder  paths.yml  schema_golden_data_api_old.json
ressources/schemas/: schema_tables.json.copy
src/dpe_enedis_ademe_etl_engine/pipelines/: __init__.py  etl_app.py
src/dpe_enedis_ademe_etl_engine/scripts/: __init__.py  extract.py  filestorage_helper.py  load.py  transform.py
src/dpe_enedis_ademe_etl_engine/utils/: __init__.py  fonctions.py
src/pipelines/: etl_app.py
src/scripts/: __init__.py  extract.py  load.py  transform.py
src/volt_engine/pipelines/: __init__.py  etl_app.py  logs_migration.py
src/volt_engine/scripts/: __init__.py  extract.py  load.py  transform.py
src/volt_engine/utils/: __init__.py  fonctions.py  mylogging.py
tests/: conftest.py  example_extract_output.parquet  test.py  test_dataflows.py  test_etl.py  test_extract_and_transf.py  test_integration.py  test_logger.py  test_push_to_api.py  test_z_del.py  tst_etl.py  tst_logger.py
tests/config/: config.json
tests/data/: example_extract_input.csv  example_extract_output.parquet
tests/ressources/schemas/: schema_golden_data.json  schema_input_data.json  schema_silver_data.json
utils/: mylogging.py
(+8 files in other folders)
